<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="emptyString">empty</string>
    <string name="calculation">Расчет</string>
    <string name="help">Справка</string>
    <string name="accurateUltrasoundResults">Высокая точность расчета по результатам УЗИ.</string>
    <string name="inaccurateUltrasoundResults">Низкая точность расчета, так как срок беременности при проведении УЗИ велик.</string>
    <string name="app_name">Дата родов</string>
    <string name="widget_small_name">Дата родов Small</string>
    <string name="widget_simple_name">Дата родов Medium</string>
    <string name="widget_additional_name">Дата родов Large</string>

    <string-array name="HelpParts">
        <item>Введение</item>
        <item>По дате последней менструации</item>
        <item>По дате овуляции (зачатия)</item>
        <item>По результатам УЗИ</item>
    </string-array>

    <string name="helpIntroduction">
<![CDATA[
 <b>ПДР</b> - предполагаемая дата родов.<br/><br/>

 Доступно три метода расчета ПДР и срока беременности:<br/><br/>

 <b> * </b>по дате последней менструации (акушерская ПДР, уточненная ПДР);<br/><br/>

 <b> * </b>по дате овуляции (эмбриональная ПДР);<br/><br/>

 <b> * </b>по результатам ультразвукового исследования (УЗИ).<br/><br/>

 Первые два метода дают наиболее точные значения для женщин с регулярными менструациями.
 Однако, многие факторы (физические и психологических нагрузки, стрессы, болезни и др.) могут влиять на продолжительность цикла, смещая наиболее благоприятный для зачатия день - день овуляции.<br/><br/>

 Кроме того, второй метод дает точное значение для женщин, забеременевших с помощью экстракорпорального оплодотворения (ЭКО) и точно знающих дату оплодотворения.<br/><br/>

 Третий метод самый точный. По результатам УЗИ, полученным на сроке 9-13 (акушерских) недель, можно вычислить ПДР с точностью до 1-3 дней.
 Более поздние УЗИ уже не так достоверны, поскольку в первом триместре размеры эмбрионов одного срока почти не отличаются.<br/><br/>
]]>
    </string>
    <string name="helpLmp">
<![CDATA[
 <b>МЦ</b> - менструальный цикл; <b>ЛФ</b> - лютеиновая фаза (вторая фаза МЦ); <b>ФФ</b> - фолликулярная фаза (первая фаза МЦ).<br/><br/>

 Оставьте без изменений значения продолжительности МЦ или ЛФ, если не знаете, как их определить.<br/><br/>

 Если менструации нерегулярные, то в качестве продолжительности МЦ введите среднее арифметическое продолжительностей трех последних циклов.<br/><br/>

 Средняя <i>продолжительность МЦ</i> у женщин составляет 28 дней и может колебаться в пределах от 21 до 45 дней.<br/><br/>

 Средняя <i>продолжительность ЛФ</i> у женщин составляет 14 дней и может колебаться в пределах от 10 до 16 дней.
 Продолжительность ЛФ конкретной женщины остается постоянной в определенный период времени.<br/><br/>

 Чтобы получить наиболее вероятный день овуляции, необходимо из продолжительности МЦ вычесть продолжительность ЛФ.
 (Например, если цикл длится 35 дней, ЛФ - 16 дней, то овуляция происходит на 19-й день цикла).<br/><br/>

 <i><b>Уточненная ПДР</b> = Дата последней менструации + Длина ФФ + 38 недель,</i><br/><br/>

 где <i>Длина ФФ = Длина МЦ - Длина ЛФ,</i><br/><br/>

 <i>Дата последней менструации</i> - первый день последней менструации.<br/><br/>

 <i><b>Срок беременности</b> = Заданная дата - Дата последней менструации.</i><br/><br/>

 <b><i>Обратите внимание:</i></b> в акушерстве средняя продолжительность первой фазы цикла (ФФ) принимается равной 14 дням и продолжительность всей беременности - 40 неделям.
 Поэтому, если Вы точно знаете продолжительность своего цикла (и, может быть, даже ЛФ), то ваша беременность может длится больше или меньше 40 недель, т.е. ПДР будет выпадать на срок беременности, отличный от 40 недель.<br/><br/>

 Программа рассчитывает уточненную ПДР, поскольку она точнее акушерской.
 Если Вы не знаете продолжительностей МЦ и ЛФ и оставите их значения по умолчанию, то получите значение акушерской ПДР, рассчитанной по формуле: <i><b>Акушерская ПДР</b> = Дата последней менструации + 40 недель.</i><br/><br/>
]]>
    </string>
    <string name="helpOvulation">
<![CDATA[
 <i><b>Эмбриональная ПДР</b> = Дата овуляции + 38 недель.</i><br/><br/>

 Вместо даты овуляции можно подставить дату полового контакта, однако и это не дает точного представления о дате зачатия, которое может произойти в течение нескольких дней после полового акта.<br/><br/>

 Также под датой овуляции может пониматься дата оплодотворения яйцеклетки, которая бывает точно известна женщинам, желающим забеременеть с помощью ЭКО.<br/><br/>

 <i><b>Эмбриональный срок беременности</b> = Заданная дата - Дата овуляции.</i><br/><br/>

 <b><i>Обратите внимание:</i></b> продолжительность беременности в этом случае считается равной 38 неделям, и ПДР будет выпадать на срок беременности 38 недель.<br/><br/>
]]>
    </string>
    <string name="helpUltrasound">
<![CDATA[
 <i><b>ПДР по результатам УЗИ</b> = Дата проведения исследования + Полный срок беременности - Диагностированный срок беременности.</i><br/><br/>

 Под полным сроком беременности здесь понимается значение 40 недель, если в заключении указан "акушерский" срок, или 38 недель, если "эмбриональный" (отсчитываемый от предполагаемой даты зачатия).
 Как правило, если на УЗИ определяется эмбрион или плод, то в заключении указывается "акушерский" срок, если же только плодное яйцо, то "эмбриональный".
 Уточните эти данные у врача, проводившего исследование.<br/><br/>

 <i><b>Срок беременности по результатам УЗИ</b> = Заданная дата - Дата начала отсчета беременности,</i><br/><br/>

 где<br/><br/>

 <i>Дата начала отсчета беременности = Дата проведения исследования - Диагностированный срок беременности.</i><br/><br/>

 <b><i>Обратите внимание:</i></b> если указан акушерский срок, то полный срок беременности принимается за 40 недель, если эмбриональный, то за 38 недель.<br/><br/>
]]>
    </string>
    <string name="acceptDefaults">* Оставьте значения по умолчанию, если не можете их уточнить.</string>
    <string name="menstrualCycleLen">Менструальный цикл*</string>
    <string name="lutealPhaseLen">Лютеиновая фаза*</string>
    <string name="restoreDefaultValues">Восстановить значения по умолчанию</string>
    <string name="lastMenstruationDate">Дата последней менструации</string>
    <string name="ovulationDate">Дата овуляции (предполагаемая дата зачатия)</string>
    <string name="ultrasoundResults">Результаты УЗИ</string>
    <string name="ultrasoundDate">Дата проведения исследования</string>
    <string name="diagnosedAge">Диагностированный срок беременности</string>
    <string name="isGestationalAge">Указан акушерский срок (как правило)</string>
    <string name="isEmbryonicAge">Указан эмбриональный срок</string>
    <string name="weeks">нед.</string>
    <string name="days">д.</string>
    <string name="calculateEstimatedChildbirthDate">Рассчитать дату родов</string>
    <string name="calculateEstimatedGestationalAge">Рассчитать срок беременности</string>
    <string name="childbirthDate">Дата родов</string>
    <string name="gestationalAge">Срок беременности</string>
    <string name="errorNotSelectedCalculationMethod">Не выбран способ расчета</string>
    <string name="consultADoctor">Обратитесь в женскую консультацию для уточнения срока беременности и ПДР</string>
    <string name="estimatedChildbirthDate">Предполагаемая дата родов</string>
    <string name="byLMP">по дате последней менструации</string>
    <string name="byOvulation">по дате овуляции (зачатия)</string>
    <string name="byUltrasound">по результатам УЗИ</string>

    <string-array name="MethodNames">
        <item>По дате последней менструации</item>
        <item>По дате овуляции (зачатия)</item>
        <item>По результатам УЗИ</item>
    </string-array>

    <string name="rememberECD">Помните, что роды могут начаться на две недели раньше или на две недели позже ПДР.</string>
    <string name="rememberEGA">Помните, что нормально протекающая беременность длится от 38 до 42 недель.</string>
    <string name="rateApplication">Оценить приложение</string>
    <string name="marketNotFound">Приложение market не найдено</string>
    <string name="estimatedGestationalAge">Предполагаемый срок беременности (%s)</string>
    <string name="currentDate">Дата расчета срока беременности</string>
    <string name="errorIncorrectGestationalAge">Ошибка</string>
    <string name="errorIncorrectCurrentDateGreater">Указанная дата расчета намного больше ПДР.</string>
    <string name="errorIncorrectCurrentDateSmaller">Указанная дата расчета меньше даты начала отсчета беременности.</string>
    <string name="firstTrimester">Первый триместр</string>
    <string name="secondTrimester">Второй триместр</string>
    <string name="thirdTrimester">Третий триместр</string>
    <string name="additionalInfo">триместр: %1$s; полный срок: %2$s%3$s</string>
    <string name="positiveRest">; осталось до ПДР: %s</string>
    <string name="zeroRest">; ПДР</string>
    <string name="negativeRest"></string>
    <string name="lighttheme">Светлая тема</string>
    <string name="darktheme">Темная тема</string>
    <string name="errorInvalidAppWidgetId">Некорректный идентификатор виджета.</string>
    <string name="widgetSpecifyTheMethodOfCalculation">Задайте предпочтительный метод расчета:</string>
    <string name="widgetToastSpecifyTheMethodOfCalculation">Выберите метод расчета</string>
    <string name="widgetAddWidget">Добавить виджет</string>
    <string name="widgetStartTheApplicationToSpecifyNecessaryData">Запустите приложение и заполните необходимые для расчета данные</string>
    <string name="widgetStartTheApplication">Запустить приложение</string>
    <string name="countdown">Обратный отсчет</string>
    <string name="showCalculatingMethod">Отображать метод расчета</string>
    <string name="widgetTextInfo">Беременность</string>
    <string name="widgetTextRestInfo">До родов</string>
    <string name="widgetCalculatingMethod">Метод расчета: %s</string>
    <string name="initialization">Загрузка&#8230;</string>
    <string name="today">Сегодня</string>
    <string name="titles0">Дата последней менструации: %1$s; МЦ: %2$s д.; ЛФ: %3$s д.</string>
    <string name="titles1">Дата овуляции (зачатия): %1$s</string>
    <string name="titles2">Дата проведения исследования: %1$s; диагностированный срок беременности: %2$s (%3$s)</string>
    <string name="gestational">акушерский</string>
    <string name="embryonic">эмбриональный</string>

</resources>