<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle" >

    <LinearLayout style="@style/LinearLayoutVerticalStyle.Padding" >

        <TextView
            android:id="@+id/widgetConfigureTextView"
            style="@style/TextViewStyle.Medium"
            android:text="@string/widgetSpecifyTheMethodOfCalculation" />

        <RadioGroup style="@style/RadioGroupStyle" >

            <RadioButton
                android:id="@+id/radioByLMP"
                style="@style/RadioButtonStyle"
                android:text="@string/byLMP" />

            <RadioButton
                android:id="@+id/radioByOvulation"
                style="@style/RadioButtonStyle"
                android:text="@string/byOvulation" />

            <RadioButton
                android:id="@+id/radioByUltrasound"
                style="@style/RadioButtonStyle"
                android:text="@string/byUltrasound" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxCountdown"
            style="@style/CheckBoxStyle"
            android:text="@string/countdown" />

        <CheckBox
            android:id="@+id/checkBoxShowCalculatingMethod"
            style="@style/CheckBoxStyle"
            android:text="@string/showCalculatingMethod" />

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <RelativeLayout style="@style/ButtonSpace" />

            <Button
                android:id="@+id/widgetConfigureButton"
                style="@style/ButtonStyle"
                android:text="@string/widgetAddWidget" />

            <RelativeLayout style="@style/ButtonSpace" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>