<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle"
    tools:context=".DetailsActivity" >

    <LinearLayout style="@style/LinearLayoutVerticalStyle.WithPadding" >

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/ultrasoundDate" />

        <DatePicker
            android:id="@+id/datePickerUltrasoundDate"
            style="@style/DatePickerStyle" />

        <LinearLayout
            style="@style/LinearLayoutVerticalStyle"
            android:layout_width="wrap_content" >

            <TextView
                style="@style/TextViewStyle"
                android:paddingTop="@dimen/view_padding"
                android:text="@string/diagnosedAge" />

            <LinearLayout
                style="@style/LinearLayoutHorizontalStyle"
                android:gravity="center" >

                <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                    android:id="@+id/numberPickerUltrasoundWeeks"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:paddingRight="@dimen/view_padding"
                    android:text="@string/weeks" />

                <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                    android:id="@+id/numberPickerUltrasoundDays"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/days" />
            </LinearLayout>
        </LinearLayout>

        <RadioGroup style="@style/RadioGroupStyle" >

            <RadioButton
                android:id="@+id/radioIsGestationalAge"
                style="@style/RadioButtonStyle"
                android:text="@string/isGestationalAge" />

            <RadioButton
                android:id="@+id/radioIsEmbryonicAge"
                style="@style/RadioButtonStyle"
                android:text="@string/isEmbryonicAge" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>