<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewStyle" >

    <LinearLayout
        style="@style/LinearLayoutVerticalStyle.Padding" >

        <!-- new line -->

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/ultrasoundDate" />

        <!-- new line -->

        <DatePicker
            android:id="@+id/datePickerUltrasoundDate"
            style="@style/DatePickerStyle" />

        <!-- new line -->

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/diagnosedAge" />

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                android:id="@+id/editTextWeeks"
                style="@style/NumberPickerStyle" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:text="@string/weeks" />

            <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                android:id="@+id/editTextDays"
                style="@style/NumberPickerStyle" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:text="@string/days" />
        </LinearLayout>

        <!-- new line -->

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioIsGestationalAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/isGestationalAge"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radioIsEmbryonicAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isEmbryonicAge"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>