<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabSettings"
    style="@style/ScrollViewStyle" >

    <LinearLayout style="@style/LinearLayoutVerticalStyle" >

        <!-- new line -->

        <TextView
            style="@style/TextViewStyle.LeftPadding"
            android:text="@string/acceptDefaults" />

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <TextView
                style="@style/SET_COL1"
                android:text="@string/menstrualCycleLen" />

            <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                android:id="@+id/editTextMenstrualCycleLen"
                style="@style/NumberPickerStyle" />

            <TextView
                style="@style/SET_COL2"
                android:text="@string/days" />
        </LinearLayout>

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <TextView
                style="@style/SET_COL1"
                android:text="@string/lutealPhaseLen" />

            <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                android:id="@+id/editTextLutealPhaseLen"
                style="@style/NumberPickerStyle" />

            <TextView
                style="@style/SET_COL2"
                android:text="@string/days" />
        </LinearLayout>

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <RelativeLayout style="@style/ButtonSpace" />

            <Button
                style="@style/ButtonStyle.SmallText"
                android:onClick="restoreDefaultValues"
                android:text="@string/restoreDefaultValues" />

            <RelativeLayout style="@style/ButtonSpace" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>