<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewStyle" >

    <LinearLayout
        style="@style/LinearLayoutVerticalStyle"
        android:padding="@dimen/shift" >

        <!-- new line -->

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/lastMenstruationDate" />

        <!-- new line -->

        <DatePicker
            android:id="@+id/datePickerLastMenstruationDate"
            style="@style/DatePickerStyle" />

        <!-- new line -->

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/acceptDefaults" />

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <TextView
                style="@style/TextViewStyle.Center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/menstrualCycleLen" />

            <TextView
                style="@style/TextViewStyle.Center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/lutealPhaseLen" />
        </LinearLayout>

        <!-- new line -->

        <LinearLayout
            style="@style/LinearLayoutHorizontalStyle"
            android:baselineAligned="false" >

            <LinearLayout
                style="@style/LinearLayoutHorizontalStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center" >

                <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                    android:id="@+id/editTextMenstrualCycleLen"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:text="@string/days" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayoutHorizontalStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center" >

                <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                    android:id="@+id/editTextLutealPhaseLen"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:text="@string/days" />
            </LinearLayout>
        </LinearLayout>

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <Button
                android:id="@+id/buttonRestoreDefaultValues"
                style="@style/ButtonStyle"
                android:text="@string/restoreDefaultValues" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>