<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle"
    tools:context=".ResultActivity" >

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/LinearLayoutVerticalStyle.Padding" >

        <TextView
            android:id="@+id/textView0"
            style="@style/TextViewStyle.Center.Large"
            android:text="@string/emptyString" />

        <TextView
            android:id="@+id/textView1"
            style="@style/TextViewStyle.Center.Medium"
            android:text="@string/byLMP" />

        <TextView
            android:id="@+id/result1"
            style="@style/TextViewStyle.Center.Medium.Red"
            android:text="@string/emptyString" />

        <TextView
            android:id="@+id/message1"
            style="@style/TextViewStyle"
            android:text="@string/emptyString" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextViewStyle.Center.Medium"
            android:text="@string/byOvulation" />

        <TextView
            android:id="@+id/result2"
            style="@style/TextViewStyle.Center.Medium.Red"
            android:text="@string/emptyString" />

        <TextView
            android:id="@+id/message2"
            style="@style/TextViewStyle"
            android:text="@string/emptyString" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextViewStyle.Center.Medium"
            android:text="@string/byUltrasound" />

        <TextView
            android:id="@+id/result3"
            style="@style/TextViewStyle.Center.Medium.Red"
            android:text="@string/emptyString" />

        <TextView
            android:id="@+id/message3"
            style="@style/TextViewStyle"
            android:text="@string/emptyString" />

        <TextView
            android:id="@+id/textView00"
            style="@style/TextViewStyle.Medium"
            android:paddingTop="@dimen/view_padding"
            android:text="@string/emptyString" />

        <Button
            style="@style/ButtonStyle.LargeText"
            android:layout_marginTop="@dimen/view_padding"
            android:onClick="rate"
            android:text="@string/rateApplication" />
    </LinearLayout>

</ScrollView>