<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle"
    tools:context=".DetailsActivity" >

    <LinearLayout style="@style/LinearLayoutVerticalStyle.WithPadding" >

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/lastMenstruationDate" />

        <DatePicker
            android:id="@+id/datePickerLastMenstruationDate"
            style="@style/DatePickerStyle" />

        <LinearLayout
            style="@style/LinearLayoutHorizontalStyle"
            android:paddingTop="@dimen/view_padding" >

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menstrualCycleLen" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lutealPhaseLen" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutHorizontalStyle"
            android:baselineAligned="false" >

            <LinearLayout
                style="@style/LinearLayoutHorizontalStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center" >

                <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                    android:id="@+id/numberPickerMenstrualCycleLen"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/days" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayoutHorizontalStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center" >

                <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                    android:id="@+id/numberPickerLutealPhaseLen"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/days" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonRestoreDefaultValues"
            style="@style/ButtonStyle"
            android:text="@string/restoreDefaultValues" />
    </LinearLayout>

</ScrollView>