<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabCalculation"
    style="@style/ScrollViewStyle" >

    <LinearLayout style="@style/LinearLayoutVerticalStyle" >

        <!-- new line -->

        <fragment
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="com.anna.sent.soft.childbirthdate.fragments.TitlesFragment" />

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <RelativeLayout style="@style/ButtonSpace" />

            <Button
                android:id="@+id/buttonCalculateEstimatedChildbirthDate"
                style="@style/ButtonStyle.SmallText"
                android:text="@string/calculateEstimatedChildbirthDate" />

            <RelativeLayout style="@style/ButtonSpace" />
        </LinearLayout>

        <!-- new line -->

        <RelativeLayout style="@style/VerticalSpace" />

        <!-- new line -->

        <TextView
            style="@style/TextViewStyle.LeftPadding.Medium"
            android:text="@string/currentDate" />

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <DatePicker
                android:id="@+id/datePickerCurrentDate"
                style="@style/DatePickerStyle" />

            <Button
                android:id="@+id/buttonToday"
                style="@style/SmallButtonStyle"
                android:text="@string/today" />
        </LinearLayout>

        <!-- new line -->

        <LinearLayout style="@style/LinearLayoutHorizontalStyle" >

            <RelativeLayout style="@style/ButtonSpace" />

            <Button
                android:id="@+id/buttonCalculateEstimatedGestationalAge"
                style="@style/ButtonStyle.SmallText"
                android:text="@string/calculateEstimatedGestationalAge" />

            <RelativeLayout style="@style/ButtonSpace" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>